--- a/index.html
+++ b/index.html
@@ -26,12 +26,25 @@
     </div>
 
     <!-- Pari e dispari -->
-    <div class="container">
+    <div class="container text-center p-5">
         <h1>Pari e dispari</h1>
         <div class="row">
             <div class="col">
-                
+                <h2>Inserisci un numero da 1 a 5:</h2>
+                <h3 id="number"></h3>
+                <h3 id="output-number"></h3>
             </div>
+            <div class="col">
+                <h2>Numero inserito dal computer:</h2>
+                <h3 id="casual"></h3>
+            </div>
+            
+        </div>
+        <div>
+            <h3 id="output-sum" class="p-4"></h3>
+        </div>
+        <div>
+            <h3 id="output-message" class="p-3"></h3>
         </div>
     </div>
     <script src="./js/script.js"></script>
